updated the site so all the linkages work